Added notifications for warning a user
