# server/src/api/routes/mod.ts
@@ -7,6 +7,7 @@ import { deleteProject } from '#controllers/mod/delete-project.ts';
 import { deleteUserReport } from '#controllers/mod/delete-user-report.ts';
 import { getProjectReports } from '#controllers/mod/get-project-reports.ts';
 import { getUserReports } from '#controllers/mod/get-user-reports.ts';
+import { sendWarning } from '#controllers/mod/send-warning.ts';
 import { unbanUser } from '#controllers/mod/unban-user.ts';
 import requiresLogin from '../middleware/authorization/requires-login.ts';
 import requiresModerator from '../middleware/authorization/requires-mod.ts';
@@ -38,4 +39,5 @@ router.get('/project-report/', authenticated(getProjectReports));
 router.get('/user-report/', authenticated(getUserReports));
 router.delete('/project-report/:id', authenticated(deleteProjectReport));
 router.delete('/user-report/:id', authenticated(deleteUserReport));
+router.put('/warn-user/:id/', authenticated(sendWarning));
 export default router;
